--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main>
         <div class="carousel w-full header md:h-[90vh] py-8">
             <div id="slide1" class="carousel-item relative w-full">
-                <div class="flex items-center px-8 md:px-24">
+                <div class="flex flex-col md:flex-row items-center px-8 md:px-24">
                     <div class="text-white flex-1">
                         <h2 class="text-xl md:text-6xl">Honda CBR 300R</h2>
                         <p class="text-xs md:text-lg py-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div id="slide2" class="carousel-item relative w-full">
-                <div class="flex items-center px-8 md:px-24">
+                <div class="flex flex-col md:flex-row items-center px-8 md:px-24">
                     <div class="text-white flex-1">
                         <h2 class="text-xl md:text-6xl">Honda CBR 300R</h2>
                         <p class="text-xs md:text-lg py-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div id="slide3" class="carousel-item relative w-full">
-                <div class="flex items-center px-8 md:px-24">
+                <div class="flex flex-col md:flex-row  items-center px-8 md:px-24">
                     <div class="text-white flex-1">
                         <h2 class="text-xl md:text-6xl">Honda CBR 300R</h2>
                         <p class="text-xs md:text-lg py-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div id="slide4" class="carousel-item relative w-full">
-                <div class="flex items-center px-8 md:px-24">
+                <div class="flex flex-col md:flex-row items-center px-8 md:px-24">
                     <div class="text-white flex-1">
                         <h2 class="text-xl md:text-6xl">Honda CBR 300R</h2>
                         <p class="text-xs md:text-lg py-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor
@@ -176,7 +176,7 @@
         <!-------------- happy clients  ------------->
         <div>
             <h2 class="text-center text-3xl font-semibold py-10">Happy <span class="text-primary">Clients says</span></h2>
-            <div class="grid grid-cols-3 px-24 gap-10 text-center my-10">
+            <div class="grid lg:grid-cols-3 grid-cols-1 md:px-24 px-8 gap-10 text-center my-10">
                 <div class="border p-8 rounded">
                     <img class="w-8/12 mx-auto my-4" src="images/others/user-1.png" alt="">
                     <p>Slate helps you see how 
@@ -232,40 +232,72 @@
         <!-- questions section  -->
         <div>
             <h2 class="text-center text-3xl font-semibold py-10">Frequently Asked <span class="text-primary"> Questions</span></h2>
-            <div class="p-8 md:px-24 grid">
-                <div>
-                    <img src="images/others/Frame.png" alt="">
+            <div class="p-8 md:px-24 flex flex-col md:flex-row justify-between gap-8 py-10">
+                <div class="flex-1">
+                    <img class="" src="images/others/faq.png" alt="">
                 </div>
-                <div class="collapse collapse-arrow bg-base-200">
-                    <input type="radio" name="my-accordion-2" checked="checked" /> 
-                    <div class="collapse-title text-xl font-medium">
-                      Click to open this one and close others
-                    </div>
-                    <div class="collapse-content"> 
-                      <p>hello</p>
-                    </div>
-                  </div>
-                  <div class="collapse collapse-arrow bg-base-200">
-                    <input type="radio" name="my-accordion-2" /> 
-                    <div class="collapse-title text-xl font-medium">
-                      Click to open this one and close others
-                    </div>
-                    <div class="collapse-content"> 
-                      <p>hello</p>
-                    </div>
-                  </div>
-                  <div class="collapse collapse-arrow bg-base-200">
-                    <input type="radio" name="my-accordion-2" /> 
-                    <div class="collapse-title text-xl font-medium">
-                      Click to open this one and close others
-                    </div>
-                    <div class="collapse-content"> 
-                      <p>hello</p>
-                    </div>
-                  </div>
+                <div class="flex-1 flex flex-col gap-4">
+                    <div class="collapse collapse-arrow bg-base-200">
+                        <input type="radio" name="my-accordion-2" checked="checked" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            What are the most important things I should know about riding a bike?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p class="text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequuntur culpa fugiat quas necessitatibus iusto quibusdam, dolorem eaque nisi Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequuntur culpa fugiat quas necessitatibus iusto quibusdam, dolorem eaque nisi quidem. quidem.</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow bg-base-200">
+                        <input type="radio" name="my-accordion-2" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            How can I tell if my helmet is old and I need a
+new one?
+                          </div>
+                          <div class="collapse-content"> 
+                            <p class="text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequuntur culpa fugiat quas necessitatibus iusto quibusdam, dolorem eaque nisi Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequuntur culpa fugiat quas necessitatibus iusto quibusdam, dolorem eaque nisi quidem. quidem.</p>
+                          </div>
+                      </div>
+                      <div class="collapse collapse-arrow bg-base-200">
+                        <input type="radio" name="my-accordion-2" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            My bike has been in storage is it safe to ride?
+                          </div>
+                          <div class="collapse-content"> 
+                            <p class="text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequuntur culpa fugiat quas necessitatibus iusto quibusdam, dolorem eaque nisi Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequuntur culpa fugiat quas necessitatibus iusto quibusdam, dolorem eaque nisi quidem. quidem.</p>
+                          </div>
+                      </div>
+                      <div class="collapse collapse-arrow bg-base-200">
+                        <input type="radio" name="my-accordion-2" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            What rules should I follow when riding my bike?
+                          </div>
+                          <div class="collapse-content"> 
+                            <p class="text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequuntur culpa fugiat quas necessitatibus iusto quibusdam, dolorem eaque nisi Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequuntur culpa fugiat quas necessitatibus iusto quibusdam, dolorem eaque nisi quidem. quidem.</p>
+                          </div>
+                      </div>
+                </div>
             </div>
         </div>
     </main>
-</body>
 
+    <footer class="flex md:flex-row flex-col md:items-center gap-10 justify-between md:px-24 px-8 bg-gray-900 text-white py-10">
+        <div>
+            <h2 class="text-3xl font-semibold">Biker zone</h2>
+            <ul class="flex flex-wrap gap-4 md:gap-8 my-6">
+                <li>About </li>
+                <li>Features</li>
+                <li>Pricing</li>
+                <li>Careers</li>
+                <li>Help</li>
+            </ul>
+            <p>&copy; 2020 bike. All rights reserved</p>
+        </div>
+        <div>
+            <h2 class="text-2xl font-semibold mb-4">Get the App</h2>
+            <ul>
+                <li><img class="w-8/12 mb-4" src="images/others/ios.png" alt=""></li>
+                <li><img class="w-8/12 mb-4" src="images/others/android.png" alt=""></li>
+            </ul>
+        </div>
+    </footer>
+</body>
 </html>
